--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,10 +21,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ratting Advisor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlite-jdbc-3.8.11.2.jar=Libs/sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
