--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 #Sun Jul 24 14:20:11 CEST 2016
 compile.on.save=true
-user.properties.file=/home/administrador/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\anbal\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
