Fixed errors where if you had in settings wrong file paths it won't start.

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,7 +1,7 @@
-ChatLogsPath=C:\Users\anbal\Documents\EVE\logs\Chatlogs
+ChatLogsPath=None
 IntelChannel=GOTG_Intel
-RattingSystem=9CK-KZ
+RattingSystem=NONE
 JumpsNumber=3
-AlarmSound=G:\Mi Musica\pilar man awaken WAV.wav
+AlarmSound=None
 CheckLocal=FALSE
 CheckShield=FALSE
