--- a/settings.cfg
+++ b/settings.cfg
@@ -1,7 +1,7 @@
-ChatLogsPath=None
+ChatLogsPath=C:\Users\anbal\Documents\EVE\logs\Chatlogs
 IntelChannel=GOTG_Intel
-RattingSystem=NONE
+RattingSystem=9CK-KZ
 JumpsNumber=3
-AlarmSound=None
+AlarmSound=pilarManAwaken.wav
 CheckLocal=FALSE
 CheckShield=FALSE
