--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,12 +21,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ratting Advisor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-io-2.5.jar=G:\\Descargas\\commons-io-2.5\\commons-io-2.5.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=Libs/sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
