--- a/settings.cfg
+++ b/settings.cfg
@@ -1,6 +1,6 @@
 ChatLogsPath=C:\Users\anbal\Documents\EVE\logs\Chatlogs
-IntelChannel=GOTG_Intel
-RattingSystem=9CK-KZ
+IntelChannel=delve.imperium
+RattingSystem=Q-02UL
 JumpsNumber=3
 AlarmSound=pilarManAwaken.wav
 CheckLocal=FALSE
