--- a/src/rattingadvisor/resources/TimerWindow.properties
+++ b/src/rattingadvisor/resources/TimerWindow.properties
@@ -7,4 +7,4 @@ second.text=00
 jLabel4.text=Countdown Timer
 startStopCD.text=Start CD
 idTextField.text=Alarm Name Identifier
-jButton1.text=Set Defaults
+setDefaultTime.text=Set Defaults
