--- a/settings.cfg
+++ b/settings.cfg
@@ -1,7 +1,8 @@
-ChatLogsPath=C:\Users\anbal\Documents\EVE\logs\Chatlogs
+ChatLogsPath=None
 IntelChannel=delve.imperium
 RattingSystem=Q-02UL
 JumpsNumber=3
-AlarmSound=pilarManAwaken.wav
+AlarmSound=None
 CheckLocal=FALSE
 CheckShield=FALSE
+Style=LIGHT
