--- a/settings.cfg
+++ b/settings.cfg
@@ -1,8 +1,9 @@
-ChatLogsPath=None
+ChatLogsPath=C:\Users\anbal\Documents\EVE\logs\Chatlogs
 IntelChannel=delve.imperium
 RattingSystem=Q-02UL
 JumpsNumber=3
-AlarmSound=None
+AlarmSound=pilarManAwaken.wav
 CheckLocal=FALSE
 CheckShield=FALSE
 Style=LIGHT
+IncludeClear=TRUE
