--- a/settings.cfg
+++ b/settings.cfg
@@ -1,6 +1,6 @@
 ChatLogsPath=C:\Users\anbal\Documents\EVE\logs\Chatlogs
 IntelChannel=delve.imperium
-RattingSystem=Q-02UL
+RattingSystem=N8D9-Z
 JumpsNumber=3
 AlarmSound=pilarManAwaken.wav
 CheckLocal=FALSE
